sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/README.md
# @azure/arm-deviceregistry client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-deviceregistry in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                      |
| ------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [assetEndpointProfilesCreateOrReplaceSample.ts][assetendpointprofilescreateorreplacesample]                   | create a AssetEndpointProfile x-ms-original-file: 2026-11-01/CreateOrReplace_AssetEndpointProfile.json                                                                                                                               |
| [assetEndpointProfilesDeleteSample.ts][assetendpointprofilesdeletesample]                                     | delete a AssetEndpointProfile x-ms-original-file: 2026-11-01/Delete_AssetEndpointProfile.json                                                                                                                                        |
| [assetEndpointProfilesGetSample.ts][assetendpointprofilesgetsample]                                           | get a AssetEndpointProfile x-ms-original-file: 2026-11-01/Get_AssetEndpointProfile.json                                                                                                                                              |
| [assetEndpointProfilesListByResourceGroupSample.ts][assetendpointprofileslistbyresourcegroupsample]           | list AssetEndpointProfile resources by resource group x-ms-original-file: 2026-11-01/List_AssetEndpointProfiles_ByResourceGroup.json                                                                                                 |
| [assetEndpointProfilesListBySubscriptionSample.ts][assetendpointprofileslistbysubscriptionsample]             | list AssetEndpointProfile resources by subscription ID x-ms-original-file: 2026-11-01/List_AssetEndpointProfiles_BySubscription.json                                                                                                 |
| [assetEndpointProfilesUpdateSample.ts][assetendpointprofilesupdatesample]                                     | update a AssetEndpointProfile x-ms-original-file: 2026-11-01/Update_AssetEndpointProfile.json                                                                                                                                        |
| [assetsCreateOrReplaceSample.ts][assetscreateorreplacesample]                                                 | create a Asset x-ms-original-file: 2026-11-01/CreateOrReplace_Asset_With_DiscoveredAssetRef.json                                                                                                                                     |
| [assetsDeleteSample.ts][assetsdeletesample]                                                                   | delete a Asset x-ms-original-file: 2026-11-01/Delete_Asset.json                                                                                                                                                                      |
| [assetsGetSample.ts][assetsgetsample]                                                                         | get a Asset x-ms-original-file: 2026-11-01/Get_Asset.json                                                                                                                                                                            |
| [assetsListByResourceGroupSample.ts][assetslistbyresourcegroupsample]                                         | list Asset resources by resource group x-ms-original-file: 2026-11-01/List_Assets_ByResourceGroup.json                                                                                                                               |
| [assetsListBySubscriptionSample.ts][assetslistbysubscriptionsample]                                           | list Asset resources by subscription ID x-ms-original-file: 2026-11-01/List_Assets_BySubscription.json                                                                                                                               |
| [assetsUpdateSample.ts][assetsupdatesample]                                                                   | update a Asset x-ms-original-file: 2026-11-01/Update_Asset.json                                                                                                                                                                      |
| [asyncOperationStatusGetSample.ts][asyncoperationstatusgetsample]                                             | returns the current status of an async operation. x-ms-original-file: 2026-11-01/Get_AsyncOperationStatus.json                                                                                                                       |
| [billingContainersGetSample.ts][billingcontainersgetsample]                                                   | get a BillingContainer x-ms-original-file: 2026-11-01/Get_BillingContainer.json                                                                                                                                                      |
| [billingContainersListBySubscriptionSample.ts][billingcontainerslistbysubscriptionsample]                     | list BillingContainer resources by subscription ID x-ms-original-file: 2026-11-01/List_BillingContainers_BySubscription.json                                                                                                         |
| [certificateAuthoritiesActivateSample.ts][certificateauthoritiesactivatesample]                               | activates a Certificate Authority of type `ICA` and issuer type `External`. If the Certificate Authority is an invalid type, the API responds with HTTP 400. x-ms-original-file: 2026-11-01/Activate_CertificateAuthority.json       |
| [certificateAuthoritiesCreateOrReplaceSample.ts][certificateauthoritiescreateorreplacesample]                 | create a CertificateAuthority x-ms-original-file: 2026-11-01/CreateOrReplace_CertificateAuthority_ICAExternalIssuer.json                                                                                                             |
| [certificateAuthoritiesDeleteSample.ts][certificateauthoritiesdeletesample]                                   | delete a CertificateAuthority x-ms-original-file: 2026-11-01/Delete_CertificateAuthority.json                                                                                                                                        |
| [certificateAuthoritiesGetSample.ts][certificateauthoritiesgetsample]                                         | get a CertificateAuthority x-ms-original-file: 2026-11-01/Get_CertificateAuthority_ICAExternalIssuer.json                                                                                                                            |
| [certificateAuthoritiesListByNamespaceSample.ts][certificateauthoritieslistbynamespacesample]                 | list CertificateAuthority resources by Namespace x-ms-original-file: 2026-11-01/List_CertificateAuthorities_ByNamespace.json                                                                                                         |
| [certificateAuthoritiesRevokeAndRotateSample.ts][certificateauthoritiesrevokeandrotatesample]                 | revokes a Certificate Authority of type `ICA` and issuer type `Microsoft`. If the Certificate Authority is an invalid type, the API responds with HTTP 400. x-ms-original-file: 2026-11-01/RevokeAndRotate_CertificateAuthority.json |
| [certificateAuthoritiesUpdateSample.ts][certificateauthoritiesupdatesample]                                   | update a CertificateAuthority x-ms-original-file: 2026-11-01/Update_CertificateAuthority.json                                                                                                                                        |
| [certificatePoliciesCreateOrReplaceSample.ts][certificatepoliciescreateorreplacesample]                       | create a CertificatePolicy x-ms-original-file: 2026-11-01/CreateOrReplace_CertificatePolicy.json                                                                                                                                     |
| [certificatePoliciesDeleteSample.ts][certificatepoliciesdeletesample]                                         | delete a CertificatePolicy x-ms-original-file: 2026-11-01/Delete_CertificatePolicy.json                                                                                                                                              |
| [certificatePoliciesGetSample.ts][certificatepoliciesgetsample]                                               | get a CertificatePolicy x-ms-original-file: 2026-11-01/Get_CertificatePolicy.json                                                                                                                                                    |
| [certificatePoliciesListByCertificateAuthoritySample.ts][certificatepolicieslistbycertificateauthoritysample] | list CertificatePolicy resources by CertificateAuthority x-ms-original-file: 2026-11-01/List_CertificatePolicies_ByCertificateAuthority.json                                                                                         |
| [certificatePoliciesUpdateSample.ts][certificatepoliciesupdatesample]                                         | update a CertificatePolicy x-ms-original-file: 2026-11-01/Update_CertificatePolicy.json                                                                                                                                              |
| [namespaceAssetsCreateOrReplaceSample.ts][namespaceassetscreateorreplacesample]                               | create a NamespaceAsset x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceAsset.json                                                                                                                                           |
| [namespaceAssetsDeleteSample.ts][namespaceassetsdeletesample]                                                 | delete a NamespaceAsset x-ms-original-file: 2026-11-01/Delete_NamespaceAsset.json                                                                                                                                                    |
| [namespaceAssetsExecuteActionSample.ts][namespaceassetsexecuteactionsample]                                   | a long-running resource action. x-ms-original-file: 2026-11-01/ExecuteAction_Assets_Namespace.json                                                                                                                                   |
| [namespaceAssetsGetSample.ts][namespaceassetsgetsample]                                                       | get a NamespaceAsset x-ms-original-file: 2026-11-01/Get_NamespaceAsset.json                                                                                                                                                          |
| [namespaceAssetsListByNamespaceSample.ts][namespaceassetslistbynamespacesample]                               | list NamespaceAsset resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceAssets_ByNamespace.json                                                                                                                      |
| [namespaceAssetsUpdateSample.ts][namespaceassetsupdatesample]                                                 | update a NamespaceAsset x-ms-original-file: 2026-11-01/Update_NamespaceAsset.json                                                                                                                                                    |
| [namespaceDevicesCreateOrReplaceSample.ts][namespacedevicescreateorreplacesample]                             | create a NamespaceDevice x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDevice.json                                                                                                                                         |
| [namespaceDevicesDeleteSample.ts][namespacedevicesdeletesample]                                               | delete a NamespaceDevice x-ms-original-file: 2026-11-01/Delete_NamespaceDevice.json                                                                                                                                                  |
| [namespaceDevicesGetSample.ts][namespacedevicesgetsample]                                                     | get a NamespaceDevice x-ms-original-file: 2026-11-01/Get_NamespaceDevice.json                                                                                                                                                        |
| [namespaceDevicesListByNamespaceSample.ts][namespacedeviceslistbynamespacesample]                             | list NamespaceDevice resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDevices_ByNamespace.json                                                                                                                    |
| [namespaceDevicesUpdateSample.ts][namespacedevicesupdatesample]                                               | update a NamespaceDevice x-ms-original-file: 2026-11-01/Update_NamespaceDevice.json                                                                                                                                                  |
| [namespaceDiscoveredAssetsCreateOrReplaceSample.ts][namespacediscoveredassetscreateorreplacesample]           | create a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDiscoveredAsset.json                                                                                                                       |
| [namespaceDiscoveredAssetsDeleteSample.ts][namespacediscoveredassetsdeletesample]                             | delete a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Delete_NamespaceDiscoveredAsset.json                                                                                                                                |
| [namespaceDiscoveredAssetsGetSample.ts][namespacediscoveredassetsgetsample]                                   | get a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Get_NamespaceDiscoveredAsset.json                                                                                                                                      |
| [namespaceDiscoveredAssetsListByNamespaceSample.ts][namespacediscoveredassetslistbynamespacesample]           | list NamespaceDiscoveredAsset resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDiscoveredAssets_ByNamespace.json                                                                                                  |
| [namespaceDiscoveredAssetsUpdateSample.ts][namespacediscoveredassetsupdatesample]                             | update a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Update_NamespaceDiscoveredAsset.json                                                                                                                                |
| [namespaceDiscoveredDevicesCreateOrReplaceSample.ts][namespacediscovereddevicescreateorreplacesample]         | create a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDiscoveredDevice.json                                                                                                                     |
| [namespaceDiscoveredDevicesDeleteSample.ts][namespacediscovereddevicesdeletesample]                           | delete a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Delete_NamespaceDiscoveredDevice.json                                                                                                                              |
| [namespaceDiscoveredDevicesGetSample.ts][namespacediscovereddevicesgetsample]                                 | get a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Get_NamespaceDiscoveredDevice.json                                                                                                                                    |
| [namespaceDiscoveredDevicesListByNamespaceSample.ts][namespacediscovereddeviceslistbynamespacesample]         | list NamespaceDiscoveredDevice resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDiscoveredDevices_ByNamespace.json                                                                                                |
| [namespaceDiscoveredDevicesUpdateSample.ts][namespacediscovereddevicesupdatesample]                           | update a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Update_NamespaceDiscoveredDevice.json                                                                                                                              |
| [namespacesCreateOrReplaceSample.ts][namespacescreateorreplacesample]                                         | create a Namespace x-ms-original-file: 2026-11-01/CreateOrReplace_Namespace_With_ManagementEndpoints.json                                                                                                                            |
| [namespacesDeleteSample.ts][namespacesdeletesample]                                                           | delete a Namespace x-ms-original-file: 2026-11-01/Delete_Namespace.json                                                                                                                                                              |
| [namespacesGetSample.ts][namespacesgetsample]                                                                 | get a Namespace x-ms-original-file: 2026-11-01/Get_Namespace.json                                                                                                                                                                    |
| [namespacesListByResourceGroupSample.ts][namespaceslistbyresourcegroupsample]                                 | list Namespace resources by resource group x-ms-original-file: 2026-11-01/List_Namespace_ByResourceGroup.json                                                                                                                        |
| [namespacesListBySubscriptionSample.ts][namespaceslistbysubscriptionsample]                                   | list Namespace resources by subscription ID x-ms-original-file: 2026-11-01/List_Namespace_BySubscription.json                                                                                                                        |
| [namespacesMigrateSample.ts][namespacesmigratesample]                                                         | migrate the resources into Namespace x-ms-original-file: 2026-11-01/Migrate_Assets_Namespace.json                                                                                                                                    |
| [namespacesUpdateSample.ts][namespacesupdatesample]                                                           | update a Namespace x-ms-original-file: 2026-11-01/Update_Namespace_ManagementEndpoints.json                                                                                                                                          |
| [operationStatusGetSample.ts][operationstatusgetsample]                                                       | returns the current status of an async operation. x-ms-original-file: 2026-11-01/Get_OperationStatus.json                                                                                                                            |
| [operationsListSample.ts][operationslistsample]                                                               | list the operations for the provider x-ms-original-file: 2026-11-01/List_Operations.json                                                                                                                                             |
| [registryDevicesCreateOrReplaceSample.ts][registrydevicescreateorreplacesample]                               | create a RegistryDevice x-ms-original-file: 2026-11-01/CreateOrReplace_RegistryDevice.json                                                                                                                                           |
| [registryDevicesDeleteSample.ts][registrydevicesdeletesample]                                                 | delete a RegistryDevice x-ms-original-file: 2026-11-01/Delete_RegistryDevice.json                                                                                                                                                    |
| [registryDevicesGetSample.ts][registrydevicesgetsample]                                                       | get a RegistryDevice x-ms-original-file: 2026-11-01/Get_RegistryDevice.json                                                                                                                                                          |
| [registryDevicesListByNamespaceSample.ts][registrydeviceslistbynamespacesample]                               | list RegistryDevice resources by Namespace x-ms-original-file: 2026-11-01/List_RegistryDevices_ByNamespace.json                                                                                                                      |
| [registryDevicesUpdateSample.ts][registrydevicesupdatesample]                                                 | update a RegistryDevice x-ms-original-file: 2026-11-01/Update_RegistryDevice.json                                                                                                                                                    |
| [schemaRegistriesCreateOrReplaceSample.ts][schemaregistriescreateorreplacesample]                             | create a SchemaRegistry x-ms-original-file: 2026-11-01/CreateOrReplace_SchemaRegistry.json                                                                                                                                           |
| [schemaRegistriesDeleteSample.ts][schemaregistriesdeletesample]                                               | delete a SchemaRegistry x-ms-original-file: 2026-11-01/Delete_SchemaRegistry.json                                                                                                                                                    |
| [schemaRegistriesGetSample.ts][schemaregistriesgetsample]                                                     | get a SchemaRegistry x-ms-original-file: 2026-11-01/Get_SchemaRegistry.json                                                                                                                                                          |
| [schemaRegistriesListByResourceGroupSample.ts][schemaregistrieslistbyresourcegroupsample]                     | list SchemaRegistry resources by resource group x-ms-original-file: 2026-11-01/List_SchemaRegistries_ByResourceGroup.json                                                                                                            |
| [schemaRegistriesListBySubscriptionSample.ts][schemaregistrieslistbysubscriptionsample]                       | list SchemaRegistry resources by subscription ID x-ms-original-file: 2026-11-01/List_SchemaRegistries_BySubscription.json                                                                                                            |
| [schemaRegistriesUpdateSample.ts][schemaregistriesupdatesample]                                               | update a SchemaRegistry x-ms-original-file: 2026-11-01/Update_SchemaRegistry.json                                                                                                                                                    |
| [schemaVersionsCreateOrReplaceSample.ts][schemaversionscreateorreplacesample]                                 | create a SchemaVersion x-ms-original-file: 2026-11-01/CreateOrReplace_SchemaVersion.json                                                                                                                                             |
| [schemaVersionsDeleteSample.ts][schemaversionsdeletesample]                                                   | delete a SchemaVersion x-ms-original-file: 2026-11-01/Delete_SchemaVersion.json                                                                                                                                                      |
| [schemaVersionsGetSample.ts][schemaversionsgetsample]                                                         | get a SchemaVersion x-ms-original-file: 2026-11-01/Get_SchemaVersion.json                                                                                                                                                            |
| [schemaVersionsListBySchemaSample.ts][schemaversionslistbyschemasample]                                       | list SchemaVersion resources by Schema x-ms-original-file: 2026-11-01/List_SchemaVersions_BySchema.json                                                                                                                              |
| [schemasCreateOrReplaceSample.ts][schemascreateorreplacesample]                                               | create a Schema x-ms-original-file: 2026-11-01/CreateOrReplace_Schema.json                                                                                                                                                           |
| [schemasDeleteSample.ts][schemasdeletesample]                                                                 | delete a Schema x-ms-original-file: 2026-11-01/Delete_Schema.json                                                                                                                                                                    |
| [schemasGetSample.ts][schemasgetsample]                                                                       | get a Schema x-ms-original-file: 2026-11-01/Get_Schema.json                                                                                                                                                                          |
| [schemasListBySchemaRegistrySample.ts][schemaslistbyschemaregistrysample]                                     | list Schema resources by SchemaRegistry x-ms-original-file: 2026-11-01/List_Schemas_BySchemaRegistry.json                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/assetEndpointProfilesCreateOrReplaceSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/assetEndpointProfilesCreateOrReplaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[assetendpointprofilescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesCreateOrReplaceSample.ts
[assetendpointprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesDeleteSample.ts
[assetendpointprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesGetSample.ts
[assetendpointprofileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesListByResourceGroupSample.ts
[assetendpointprofileslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesListBySubscriptionSample.ts
[assetendpointprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetEndpointProfilesUpdateSample.ts
[assetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsCreateOrReplaceSample.ts
[assetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsDeleteSample.ts
[assetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsGetSample.ts
[assetslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsListByResourceGroupSample.ts
[assetslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsListBySubscriptionSample.ts
[assetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/assetsUpdateSample.ts
[asyncoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/asyncOperationStatusGetSample.ts
[billingcontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/billingContainersGetSample.ts
[billingcontainerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/billingContainersListBySubscriptionSample.ts
[certificateauthoritiesactivatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesActivateSample.ts
[certificateauthoritiescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesCreateOrReplaceSample.ts
[certificateauthoritiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesDeleteSample.ts
[certificateauthoritiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesGetSample.ts
[certificateauthoritieslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesListByNamespaceSample.ts
[certificateauthoritiesrevokeandrotatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesRevokeAndRotateSample.ts
[certificateauthoritiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificateAuthoritiesUpdateSample.ts
[certificatepoliciescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificatePoliciesCreateOrReplaceSample.ts
[certificatepoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificatePoliciesDeleteSample.ts
[certificatepoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificatePoliciesGetSample.ts
[certificatepolicieslistbycertificateauthoritysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificatePoliciesListByCertificateAuthoritySample.ts
[certificatepoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/certificatePoliciesUpdateSample.ts
[namespaceassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsCreateOrReplaceSample.ts
[namespaceassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsDeleteSample.ts
[namespaceassetsexecuteactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsExecuteActionSample.ts
[namespaceassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsGetSample.ts
[namespaceassetslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsListByNamespaceSample.ts
[namespaceassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceAssetsUpdateSample.ts
[namespacedevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDevicesCreateOrReplaceSample.ts
[namespacedevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDevicesDeleteSample.ts
[namespacedevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDevicesGetSample.ts
[namespacedeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDevicesListByNamespaceSample.ts
[namespacedevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDevicesUpdateSample.ts
[namespacediscoveredassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredAssetsCreateOrReplaceSample.ts
[namespacediscoveredassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredAssetsDeleteSample.ts
[namespacediscoveredassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredAssetsGetSample.ts
[namespacediscoveredassetslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredAssetsListByNamespaceSample.ts
[namespacediscoveredassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredAssetsUpdateSample.ts
[namespacediscovereddevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredDevicesCreateOrReplaceSample.ts
[namespacediscovereddevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredDevicesDeleteSample.ts
[namespacediscovereddevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredDevicesGetSample.ts
[namespacediscovereddeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredDevicesListByNamespaceSample.ts
[namespacediscovereddevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespaceDiscoveredDevicesUpdateSample.ts
[namespacescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesCreateOrReplaceSample.ts
[namespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesDeleteSample.ts
[namespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesGetSample.ts
[namespaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesListByResourceGroupSample.ts
[namespaceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesListBySubscriptionSample.ts
[namespacesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesMigrateSample.ts
[namespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/namespacesUpdateSample.ts
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/operationStatusGetSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/operationsListSample.ts
[registrydevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/registryDevicesCreateOrReplaceSample.ts
[registrydevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/registryDevicesDeleteSample.ts
[registrydevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/registryDevicesGetSample.ts
[registrydeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/registryDevicesListByNamespaceSample.ts
[registrydevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/registryDevicesUpdateSample.ts
[schemaregistriescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesCreateOrReplaceSample.ts
[schemaregistriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesDeleteSample.ts
[schemaregistriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesGetSample.ts
[schemaregistrieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesListByResourceGroupSample.ts
[schemaregistrieslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesListBySubscriptionSample.ts
[schemaregistriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaRegistriesUpdateSample.ts
[schemaversionscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaVersionsCreateOrReplaceSample.ts
[schemaversionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaVersionsDeleteSample.ts
[schemaversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaVersionsGetSample.ts
[schemaversionslistbyschemasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemaVersionsListBySchemaSample.ts
[schemascreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemasCreateOrReplaceSample.ts
[schemasdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemasDeleteSample.ts
[schemasgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemasGetSample.ts
[schemaslistbyschemaregistrysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/typescript/src/schemasListBySchemaRegistrySample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-deviceregistry
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/deviceregistry/arm-deviceregistry/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
